# ShellyElevate

./: .gitignore  LICENSE  README.md  ShellyDebugLite.stl  gradle.properties  settings.gradle.kts
.devcontainer/: Dockerfile  README.md  devcontainer.json  setup.sh
.github/: FUNDING.yml  copilot-instructions.md
.github/workflows/: release-apk.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/assets/: jsinterfacetest.html  offline.html
app/src/main/cpp/: CMakeLists.txt  mel_jni.cpp  shellyinput.cpp
app/src/main/cpp/tflm/tensorflow/lite/experimental/microfrontend/lib/: kiss_fft_int16.cc  kiss_fft_int16.h
app/src/main/java/me/rapierxbox/ShellyElevate/: BootReceiver.java  ChromeHelper.java  HttpServer.java  (+1 more)
app/src/main/res/drawable/: ic_back_arrow.xml  ic_restart.xml  round_button_bg.xml  voice_indicator_dot.xml
app/src/main/res/layout/: digital_clock_and_date_screen_saver.xml  digital_clock_screen_saver.xml  floating_button_layout.xml  main_activity.xml  settings_activity.xml  settings_fragment.xml
app/src/main/res/menu/: settings_menu.xml
app/src/main/res/values/: arrays.xml  colors.xml  donottranslate.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: accessibility_service_config.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: install.sh
src/main/: AndroidManifest.xml
src/main/java/me/rapierxbox/shellyelevatev2/: DeviceHelper.java  HttpServerService.java  MainActivity.kt  SettingsActivity.kt
src/main/res/layout/: main_activity.xml  settings_activity.xml
src/main/res/values/: strings.xml
tools/: backup.sh  release.bat  release.sh  restore.sh
(+73 files in other folders)
